syntax = "proto3";
option java_multiple_files = true;
package rs.ftn;

message Home {
      int32 id = 1;
      string title = 2;
      string description = 3;
      int32 address = 4;
}

message User {
      int32 id = 1;
      string firstName = 2;
      string lastName = 3;
      string username = 4;
      string password = 5;
      int32 address = 6;
      bool active = 7;
      int32 home = 8;
}

message Address {
      int32 id = 1;
      string street = 2;
      int32 number = 3;
      int32 apartment = 4;
      string description = 5;
      int32 zipCode = 6;
}

message Foo {
      int32 id = 1;
      string data = 2;
      int32 bar = 3;
}

message Bar {
      int32 id = 1;
      string pff = 2;
}


message Id {
        int32 id = 1;
}

message Void {}

service HomeService {
  rpc getAll (Void) returns (stream Home);

  rpc save (Home) returns (Home);

  rpc getOne (Id) returns (Home);

  rpc delete (Id) returns (Void);
}

service UserService {
  rpc getAll (Void) returns (stream User);

  rpc save (User) returns (User);

  rpc getOne (Id) returns (User);

  rpc delete (Id) returns (Void);
}

service AddressService {
  rpc getAll (Void) returns (stream Address);

  rpc save (Address) returns (Address);

  rpc getOne (Id) returns (Address);

  rpc delete (Id) returns (Void);
}

service FooService {
  rpc getAll (Void) returns (stream Foo);

  rpc save (Foo) returns (Foo);

  rpc getOne (Id) returns (Foo);

  rpc delete (Id) returns (Void);
}

service BarService {
  rpc getAll (Void) returns (stream Bar);

  rpc save (Bar) returns (Bar);

  rpc getOne (Id) returns (Bar);

  rpc delete (Id) returns (Void);
}

